<resources>
    <string name="app_name">Project#1729</string>
    <string name="app_title">Измерение КЧСМ</string>
    <string name="settings_title">Настройки</string>
    <string name="connection_status">Статус соединения: Не подключено</string>
    <string name="available_devices">Доступные устройства</string>
    <string name="testing_eye">Тестируемый глаз</string>
    <string name="measurement_method">Метод измерения</string>
    <string name="radiation_intensity">Интенсивность</string>
    <string name="diode_color">Выберите цвет светодиода</string>
    <string name="measure_kchsm">Измерить КЧСМ</string>
    <string name="stop">Подключиться</string>
    <string name="KCHSM">КЧСМ:</string>
    <string name="pressure">Давление:</string>
    <string name="temperature">Температура:</string>
    <string name="press_button_when">Нажми на большую кнопку, когда\n перестанешь различать мерцания</string>
    <string name="ready">Готово</string>
    <string name="left">Левый</string>
    <string name="right">Правый</string>
    <string name="straight">Прямой</string>
    <string name="reversed">Обратный</string>
    <string name="other">Другой</string>
    <string name="low">Низкая</string>
    <string name="average">Средняя</string>
    <string name="high">Высокая</string>
    <string name="connected_devices">Сопряжённые устройства</string>
    <string name="searching_devices">Поиск устройств....</string>
    <string name="no_connected_devices">Нет сопряжённых устройств...</string>
    <string name="no_found_devices">Нет найденных устройств...</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="date_and_time">Дата и время</string>
    <string name="device">Прибор</string>
    <string name="eye">Глаз</string>
    <string name="KCHSM_">КЧСМ</string>
    <string name="paired_devices">Сопряженные устройства</string>
    <string name="search_devices">Поиск устройств…</string>
    <string name="no_paired_devices">Нет сопряженных устройств…</string>
    <string name="no_searched_devices">Нет найденных устройств…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_history">Очистить историю</string>
    <string name="dialog_alert">Вы точно хотите удалить историю измерений?</string>
    <string name="dialog_alert_cannot_be_undone">Это действие нельзя\nбудет отменить</string>
    <string name="history_deleted">История измерений очищена.</string>
    <string name="auto">Авто</string>
    <string name="start_text">Войдите или зарегистрируйтесь, чтобы\nначать пользоваться приложением</string>
    <string name="start_title">Начало</string>
    <string name="start_login">Войти</string>
    <string name="start_register">Регистрация</string>
    <string name="login_text">Введите логин и пароль,\nзаданные при регистрации</string>
    <string name="login_title">Вход в аккаунт</string>
    <string name="login_hint1">Логин</string>
    <string name="login_hint2">Пароль</string>
    <string name="register_text">Введите требуемые данные для\nрегистрации нового пользователя</string>
    <string name="register_title">Регистрация</string>
    <string name="register_hint1">ФИО</string>
    <string name="register_hint2">Год рождения</string>
    <string name="register_hint2_dop">Год</string>
    <string name="register_hint3">Имеющиеся диагнозы</string>
    <string name="register_hint3_dop">Диагноз</string>
    <string name="register_hint4">Логин</string>
    <string name="register_hint5">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="results">Результаты</string>
    <string name="check">Измерение</string>
    <string name="settings">Настройки</string>
    <string name="list">Список</string>
    <string name="table">Таблица</string>
    <string name="graph">График</string>
    <string name="start_check">Начать измерение</string>
    <string name="dop_info_title">Доп информация</string>
    <string name="dop_info_text">Введите дополнительную информацию\nперед началом измерения</string>
    <string name="dop_info_question1">Нагрузка на глаза перед измерением</string>
    <string name="dop_info_question2">Длительность нагрузки (мин)</string>
    <string name="dop_info_question3">Зарядка для глаз перед измерением</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string-array name="stress_array">
        <item>Нет нагрузки</item>
        <item>Телефон</item>
        <item>Компьютер</item>
        <item>Планшет</item>
        <item>Телевизор</item>
        <item>Другое</item>
    </string-array>
    <string name="table_date">Дата и время</string>
    <string name="table_kchsm">КЧСМ\n(Гц)</string>
    <string name="table_eye">Глаз</string>
    <string name="table_method">Метод </string>
    <string name="table_saturation">Насыщенность\nдиода (%)</string>
    <string name="table_size">Размер\nдиода (мм)</string>
    <string name="table_color">Цвет\nдиода</string>
    <string name="table_brigthness">Яркость\n(лх)</string>
    <string name="table_pressure">Давление\n(кПа)</string>
    <string name="table_temperature">Температура\n(°С)</string>
    <string name="table_humidity">Влажность\n(%)</string>
    <string name="table_loading">Нагрузка\nна глаза</string>
    <string name="table_loading_duration">Длительность\nнагрузки (мин)</string>
    <string name="table_training">Зарядка\nдля глаз</string>
    <string name="no_checks_title">Измерений не найдено</string>
    <string name="no_checks_text">Проведите измерения,\nчтобы увидеть эти данные</string>
    <string name="left_eye">Левый глаз</string>
    <string name="right_eye">Правый глаз</string>
    <string name="menu_title">Меню</string>
    <string name="menu_text">Выберите нужный пункт</string>
    <string name="menu_first_title">Цветоощущение</string>
    <string name="menu_second_title">Острота зрения</string>
    <string name="menu_third_title">Состояние глазного дна</string>
    <string name="menu_fourth_title">Измерение КЧСМ</string>
    <string name="menu_first_descr">Проверка способности различать цвета, особенно красный, зеленый и синий</string>
    <string name="menu_second_descr">Измерение остроты зрения, определяющей способность видеть четко</string>
    <string name="menu_third_descr">Оценка состояния задней части глаза, включая сетчатку, зрительный нерв и сосуды</string>
    <string name="menu_fourth_descr">Измерения показателя, характеризующего состояние зрительного анализатора</string>
    <string name="rabkin_guide_title">Цветоощущение</string>
    <string name="rabkin_guide_text">Пройдите короткий тест для проверки\nвашей способности различать цвета</string>
    <string name="rabkin_guide_guide">•  Вводите то, что видите на экране\n\n•  Числа записывайте одним числом (Например: 96). Если ответов несколько, вводите их через пробел (Например: треугольник квадрат). Если нет ничего, поставьте прочерк (-)\n\n•  Вводите свой ответ сразу. Так результаты теста будут точнее</string>
    <string name="rabkin_guide_guide2">•  Числа записывайте одним числом\n(Например: 96).\n\n•  Для быстрого ввода фигур нажимайте на кнопки-подсказки\n\n•  Если ответов несколько, вводите их через пробел\n(Например: треугольник квадрат).\n\n•  Если нет ничего, поставьте прочерк (-)\n\n</string>
    <string name="start_testing">Начать тестирование</string>
    <string name="sivtsev_guide_title">Острота зрения</string>
    <string name="sivtsev_guide_text">Пройдите короткий тест для проверки\nостроты вашего зрения</string>
    <string name="sivtsev_guide_guide">•  Закройте один глаз, снимите ваши очки или линзы\n\n•  Держите устройство на расстоянии вытянутой руки\n\n•  Вводите букву, которую видите на экране. Если нет ничего, поставьте прочерк (-)</string>
    <string name="sivtsev_guide_guide2">•  Вводите букву, которую видите на экране\n\n•  Если нет ничего или букву не видно, поставьте прочерк (-)\n\n•  Вводите свой ответ сразу. Так результаты теста будут точнее\n\n•  Рекомендуется пройти тест несколько раз для получения более точного результата\n\n</string>
    <string name="your_answer">Ваш ответ:</string>
    <string name="what_do_you_see">Что вы видите на картинке?</string>
    <string name="next">Далее</string>
    <string name="rabkin_results_title">Результаты</string>
    <string name="rabkin_results_text">Ознакомьтесь с вашими результатами\nтеста по проверке цветоощущения</string>
    <string name="rabkin_results_text2">Ваш результат теста:</string>
    <string name="rabkin_results_info_text">•  Для просмотра подробной информации нажмите на ваш результат\n\n•  Результаты теста могут быть неточными\n\n•  При повторении результатов рекомендуется обратиться к врачу\n\n•  Рекомендуется пройти тест несколько раз</string>
    <string name="rabkin_deiteranopy">Дейтеранопия</string>
    <string name="rabkin_protanopy">Протанопия</string>
    <string name="rabkin_dihromasuim">Дихромазия</string>
    <string name="rabkin_okay">Всё хорошо</string>
    <string name="finish">Завершить</string>
    <string name="rabkin_results_guide_okay">Ваше цветовосприятие соотвествует нормальному цветовосприятию обычного человека.\nС вашим зрением всё отлично!</string>
    <string name="rabkin_results_guide_dihromazy">Это расстройтво зрения, при котором человек способен воспринимать только два вида цветов. В зависимости от воспринимаемых цветов, дихромазия делится на дейтеранопию, протанопию и тританопию.\nПопробуйте пройти этот тест ещё раз, и, если результат повторится, советуем обратиться к специалисту.</string>
    <string name="rabkin_results_guide_deiteranopy">Это нарушение цветового восприятия, при котором человек не способен воспринимать оттенки зелёного спектра.\nПопробуйте пройти этот тест ещё раз, и, если результат повторится, советуем обратиться к специалисту.</string>
    <string name="rabkin_results_guide_protanopy">Это нарушение цветового восприятия, при котором человек не способен воспринимать оттенки красного спектра.\nПопробуйте пройти этот тест ещё раз, и, если результат повторится, советуем обратиться к специалисту.</string>
    <string name="triangle">треугольник</string>
    <string name="square">квадрат</string>
    <string name="circle">круг</string>
    <string name="sivtsev_bad">Близорукость</string>
    <string name="sivtsev_results_text">Ознакомьтесь с вашими результатами\nтеста по проверке остроты зрения</string>
    <string name="sivtsev_results_guide_bad">Это дефект зрения, при котором человек видит хорошо лишь вблизи. \nПопробуйте пройти этот тест ещё раз, и, если результат повторится, советуем обратиться к специалисту.</string>
    <string name="sivtsev_results_guide_okay">Ваша острота зрения в норме, отклонений не выявлено.\nС вашим зрением всё отлично!</string>
    <string name="exit_title">Вы действительно хотите прервать тестирование?</string>
    <string name="exit_descr">Введенные ответы будут утеряны.</string>
    <string name="history_title">История измерений</string>
    <string name="history_text">Просматривайте и изучайте результаты\nпроведенных тестов и измерений</string>
    <string name="history_rabkin_title">Тесты на цветовосприятие</string>
    <string name="history_sivtsev_title">Тесты на остроту зрения</string>
    <string name="history_kchsm_title">Измерения КЧСМ</string>
    <string name="history_photo_title">Cнимки глазного дна</string>
    <string name="history_KCHSM_title">Измерения КЧСМ</string>
    <string name="history_rabkin_text">Здесь находятся результаты\nтестов на цветовосприятие</string>
    <string name="history_sivtsev_text">Здесь находятся результаты\nтестов на остроту зрения</string>
    <string name="history_kchsm_text">Здесь находятся результаты\nизмерений КЧСМ</string>
    <string name="history_photo_text">Здесь находятся снимки\nглазного дна</string>
    <string name="history_placeholder_title">Здесь пока ничего нет :(</string>
    <string name="history_placeholder_text">Пройдите первый тест,\nчтобы увидеть ваш результат</string>
</resources>