<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainLightBlue"
    tools:context=".ui.fragment.ResultsTableFragment">


    <LinearLayout
        android:id="@+id/resultsTablePlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="182dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/picture_4"

            />

        <TextView
            android:id="@+id/resultsNoChecksTitle"
            style="@style/screenTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/no_checks_title"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/resultsNoChecksText"
            style="@style/screenTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/no_checks_text" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TableLayout
                        android:id="@+id/table"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="24dp"
                        android:visibility="gone">

                        <TableRow>

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_date" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_kchsm" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_eye" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_method" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_saturation" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_color" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_size" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_brigthness" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_pressure" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_temperature" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_humidity" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_loading" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_loading_duration" />

                            <TextView
                                style="@style/TableTitleStyle"
                                android:text="@string/table_training" />

                        </TableRow>


                    </TableLayout>

                </LinearLayout>

            </HorizontalScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>