<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.RabkinGuideFragment">

    <ImageView
        android:id="@+id/rabkinGuideImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/rabkin_preview_pic"
        app:layout_constraintBottom_toTopOf="@id/rabkinGuideTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/rabkinGuideTitle"
        style="@style/screenTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/menu_first_title"
        app:layout_constraintBottom_toTopOf="@id/rabkinGuideText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rabkinGuideImage" />

    <TextView
        android:id="@+id/rabkinGuideText"
        style="@style/screenTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/rabkin_guide_text"
        app:layout_constraintBottom_toTopOf="@id/rabkinGuideGiude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rabkinGuideTitle" />


    <TextView
        android:id="@+id/rabkinGuideGiude"
        style="@style/MenuItemTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="32dp"
        android:text="@string/rabkin_guide_guide"
        app:layout_constraintBottom_toTopOf="@id/rabkinStartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rabkinGuideText" />

    <ImageButton
        android:id="@+id/rabkinStartButton"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rabkinGuideGiude" />

    <TextView
        android:id="@+id/startButtonLoginText"
        style="@style/buttonStyle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_testing"
        app:layout_constraintBottom_toBottomOf="@id/rabkinStartButton"
        app:layout_constraintEnd_toEndOf="@id/rabkinStartButton"
        app:layout_constraintStart_toStartOf="@+id/rabkinStartButton"
        app:layout_constraintTop_toTopOf="@id/rabkinStartButton"

        />

</androidx.constraintlayout.widget.ConstraintLayout>