<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:id="@+id/firstMeasureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/whiteBlack"
        android:textSize="15sp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/press_button_when"
        app:cornerRadius="10dp"
        android:backgroundTint="#ff80cc"
        />


    <ImageButton
        android:id="@+id/bigRoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/big_round_button"
        />

    <Button
        android:id="@+id/readyMeasureButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/stopMeasureButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/whiteBlack"
        android:textSize="20sp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/ready"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/yellow"
        />

    <Button
        android:id="@+id/stopMeasureButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/whiteBlack"
        android:textSize="25sp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/stop"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/pinky"
        />



</androidx.constraintlayout.widget.ConstraintLayout>